@@ -35,6 +35,11 @@ New Features
  * MRG random now raises an error with a clear message when the passed shape
    contains dimensions with bad value like 0. (Frédéric B. reported by Ian G.)
 
+Sparse
+
+ * Implement theano.sparse.mul(sparse1, sparse2) when both input don't
+   have the same sparsity pattern. (Frederic B.)
+
 Sparse Sandbox graduate
  * Remove0 op: it removes stored elements with value 0. (Frederic B.)
 
